--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#F3F3F3</color>
     <color name="colorAccent">#25C70B</color>
     <color name="textColor">#FFFFFF</color>
+    <color name="obHeading">#374553</color>
+    <color name="obDesc">#80374553</color>
 </resources>
