--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -28,9 +28,9 @@
         android:id="@+id/ob_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
         android:text="@string/dummy_heading"
         android:textAlignment="center"
         android:textColor="@color/obHeading"
@@ -54,5 +54,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ob_title" />
+
+    <Button
+        android:id="@+id/ob_btn_reg"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="45dp"
+        android:background="@drawable/button_green"
+        android:text="@string/register"
+        android:textAllCaps="false"
+        android:textColor="@color/textColor"
+        android:textSize="18sp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ob_title" />
+
+    <Button
+        android:id="@+id/ob_btn_log"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/login"
+        android:textColor="@color/colorPrimary"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:background="@drawable/button_white"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        app:layout_constraintEnd_toEndOf="@+id/ob_btn_reg"
+        app:layout_constraintStart_toStartOf="@+id/ob_btn_reg"
+        app:layout_constraintTop_toBottomOf="@+id/ob_btn_reg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
