--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -10,12 +10,13 @@
         android:id="@+id/ob_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/illustration"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_walkthough3" />
+        app:srcCompat="@drawable/ic_illustlogin" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -29,11 +30,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         android:text="@string/dummy_heading"
         android:textAlignment="center"
-        android:textColor="@color/obHeading"
+        android:textColor="@color/dark"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +50,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/dummy_text"
         android:textAlignment="center"
-        android:textColor="@color/obDesc"
+        android:textColor="@color/overlay"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +66,7 @@
         android:background="@drawable/button_green"
         android:text="@string/register"
         android:textAllCaps="false"
-        android:textColor="@color/textColor"
+        android:textColor="@color/white"
         android:textSize="18sp"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintEnd_toEndOf="parent"
