--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -39,8 +39,10 @@
 
     <Button
         android:id="@+id/btnSkip"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@android:color/transparent"
         android:text="@string/skip"
@@ -48,7 +50,6 @@
         android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         android:visibility="visible"
-        style="?android:attr/borderlessButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/onBoardPager" />
