--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -41,8 +41,7 @@
         android:id="@+id/btnSkip"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_height="50dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@android:color/transparent"
         android:text="@string/skip"
