--- a/app/src/main/res/drawable/button_white.xml
+++ b/app/src/main/res/drawable/button_white.xml
@@ -3,8 +3,8 @@
     android:color="#FAFAFA">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
-            <corners android:radius="15dp" />
+            <solid android:color="@color/white" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 </ripple>
