--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -41,7 +41,8 @@
         android:textAlignment="center"
         android:textColor="@color/dark"
         android:textSize="19sp"
-        android:textStyle="bold"
+        android:translationY="-0.15sp"
+        android:fontFamily="@font/ibm_plex_sans_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +57,11 @@
         android:layout_marginEnd="32dp"
         android:text="@string/info_desc"
         android:textAlignment="center"
-        android:textColor="@color/overlay"
+        android:textColor="@color/dark"
+        android:alpha="0.5"
         android:textSize="16sp"
+        android:fontFamily="@font/ibm_plex_sans"
+        android:translationY="-0.25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info_title" />
@@ -73,6 +77,7 @@
         android:text="@string/i_understand"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:fontFamily="@font/ibm_plex_sans_medium"
         android:textSize="16sp"
         style="?android:attr/borderlessButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,6 +94,7 @@
         android:text="@string/close"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
+        android:fontFamily="@font/ibm_plex_sans_medium"
         android:textSize="16sp"
         style="?android:attr/borderlessButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
