--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo"
-        android:contentDescription="@string/logo" />
+        app:srcCompat="@drawable/logo" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/onBoardPager"
@@ -42,6 +42,7 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@android:color/transparent"
         android:text="@string/skip"
@@ -58,6 +59,7 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@android:color/transparent"
         android:text="@string/skip"
