--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="356dp" />
+        app:layout_constraintGuide_begin="338dp" />
 
     <TextView
         android:id="@+id/ob_title"
@@ -34,9 +34,11 @@
         android:layout_marginEnd="40dp"
         android:text="@string/dummy_heading"
         android:textAlignment="center"
+        android:fontFamily="@font/ibm_plex_sans_semi_bold"
         android:textColor="@color/dark"
         android:textSize="19sp"
         android:textStyle="bold"
+        android:translationY="-0.15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -50,8 +52,11 @@
         android:layout_marginEnd="32dp"
         android:text="@string/dummy_text"
         android:textAlignment="center"
-        android:textColor="@color/overlay"
+        android:textColor="@color/dark"
+        android:fontFamily="@font/ibm_plex_sans"
+        android:alpha="0.5"
         android:textSize="16sp"
+        android:translationY="-0.25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ob_title" />
@@ -68,6 +73,7 @@
         android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:fontFamily="@font/ibm_plex_sans_medium"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +87,7 @@
         android:text="@string/login"
         android:textColor="@color/colorPrimary"
         android:textAllCaps="false"
+        android:fontFamily="@font/ibm_plex_sans_medium"
         android:textSize="18sp"
         android:background="@drawable/button_white"
         style="@style/Widget.AppCompat.Button.Borderless"
