--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,21 @@
 
     <style name="AppTheme.ActionBar.TitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textSize">20sp</item>
+        <item name="android:height">150dp</item>
+        <item name="height">60dp</item>
         <item name="android:textColor">@color/dark</item>
+    </style>
+
+    <style name="ToolbarTheme" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="android:textColor">@color/dark</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:contentInsetStart">0dp</item>
+        <item name="android:contentInsetLeft">0dp</item>
+        <item name="android:fontFamily">@font/ibm_plex_sans_semi_bold</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:height">150dp</item>
+        <item name="height">60dp</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
