Added some validation on registed

--- a/app/src/main/res/layout/fragment_term.xml
+++ b/app/src/main/res/layout/fragment_term.xml
@@ -13,9 +13,36 @@
         android:fitsSystemWindows="true"
         android:theme="@style/ToolbarTheme">
 
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="96dp"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ToolbarTheme"
+            app:expandedTitleMargin="16dp"
+            app:expandedTitleTextAppearance="@color/dark"
+            app:layout_anchor="@+id/appbar"
+            app:layout_anchorGravity="center"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/term_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp"
+                app:contentInsetLeft="0dp"
+                app:contentInsetStart="0dp"
+                app:layout_collapseMode="pin"
+                app:title="@string/terms_and_condition"
+                app:titleTextAppearance="@style/ToolbarTheme"
+                app:titleTextColor="@color/dark" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_term"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
@@ -31,9 +58,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:textSize="15sp"
                 android:fontFamily="@font/ibm_plex_sans"
                 android:text="@string/terms_and_conditions"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +81,7 @@
             android:layout_height="match_parent">
 
             <CheckBox
-                android:id="@+id/cb_remember_me"
+                android:id="@+id/cb_term_read"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -62,75 +89,54 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:button="@drawable/checkbox_selector"
+                android:enabled="false"
                 android:fontFamily="@font/ibm_plex_sans"
                 android:padding="8dp"
                 android:text="@string/ive_read_2"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/button2"
+                app:layout_constraintBottom_toTopOf="@+id/btn_term_cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_term_next"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Button"
+                android:background="@drawable/button_state_selector"
+                android:enabled="false"
+                android:fontFamily="@font/ibm_plex_sans_medium"
+                android:text="@string/next"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button2" />
+                app:layout_constraintStart_toEndOf="@+id/btn_term_cancel" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_term_cancel"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="16dp"
-                android:text="Button"
+                android:background="@drawable/button_white_state_selector"
+                android:enabled="false"
+                android:fontFamily="@font/ibm_plex_sans_medium"
+                android:text="@string/cancel"
+                android:textAllCaps="false"
+                android:textColor="@drawable/text_state_selector"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/btn_term_next"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-    <com.google.android.material.appbar.CollapsingToolbarLayout
-        android:layout_width="match_parent"
-        android:layout_height="96dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ToolbarTheme"
-        app:expandedTitleMargin="16dp"
-        app:expandedTitleTextAppearance="@color/dark"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="center"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:layout_scrollInterpolator="@android:anim/decelerate_interpolator">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/term_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="0dp"
-            app:contentInsetLeft="0dp"
-            app:contentInsetStart="0dp"
-            app:layout_collapseMode="pin"
-            app:title="@string/terms_and_condition"
-            app:titleTextAppearance="@style/ToolbarTheme"
-            app:titleTextColor="@color/dark" />
-
-        <!--            <TextView-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:textColor="@color/dark"-->
-        <!--                android:textSize="30sp"-->
-        <!--                android:fontFamily="@font/ibm_plex_sans_semi_bold"-->
-        <!--                android:text="@string/terms_and_condition"/>-->
-
-    </com.google.android.material.appbar.CollapsingToolbarLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
