--- a/app/src/main/res/layout/fragment_term.xml
+++ b/app/src/main/res/layout/fragment_term.xml
@@ -51,7 +51,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".view.misc.TermFragment">
+            tools:context=".view.sheet.TermFragment">
 
             <TextView
                 android:layout_width="match_parent"
