--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,15 @@
         <item name="android:textColor">@color/dark</item>
     </style>
 
+    <style name="AppThemeWithActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/lightest_neutral</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/lightest_neutral</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
+    </style>
+
     <style name="ToolbarTheme" parent="Widget.AppCompat.Light.ActionBar">
         <item name="android:textColor">@color/dark</item>
         <item name="android:padding">0dp</item>
