--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.misc.OTPActivity">
+    tools:context=".view.misc.ForgotPasswordActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/otp_toolbar"
+        android:id="@+id/forgotPassword_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,77 +15,68 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/imageFPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/otp_verification"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/otp_toolbar"
-        app:srcCompat="@drawable/ic_screen_lock_portrait" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_toolbar"
+        app:srcCompat="@drawable/ic_reset_password" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvFPass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/ibm_plex_sans_semi_bold"
-        android:text="@string/otp_verification"
+        android:text="@string/reset_password"
         android:textAlignment="center"
         android:textColor="@color/dark"
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintTop_toBottomOf="@+id/imageFPass" />
 
     <TextView
-        android:id="@+id/tv_otp_sent_to"
+        android:id="@+id/tv_FPass_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/ibm_plex_sans"
-        android:text="@string/otp_desc"
+        android:text="@string/reset_password_desc"
         android:textAlignment="center"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintEnd_toEndOf="@+id/tvFPass"
+        app:layout_constraintStart_toStartOf="@+id/tvFPass"
+        app:layout_constraintTop_toBottomOf="@+id/tvFPass" />
 
-    <EditText
-        android:id="@+id/edt_otp_code"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_otp_sent_to" />
-
-    <TextView
-        android:id="@+id/tv_countdown"
-        android:layout_width="0dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/edit_f_pass_phone"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/ibm_plex_sans"
-        android:text="@string/resend_in"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15sp"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_otp_code" />
+        app:layout_constraintTop_toBottomOf="@id/tv_FPass_desc">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:hint="@string/phone_number"
+            android:inputType="phone" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_verify"
+        android:id="@+id/btn_reset_password"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -97,7 +88,7 @@
         android:background="@drawable/button_state_selector"
         android:enabled="false"
         android:letterSpacing="0.01"
-        android:text="@string/verify"
+        android:text="@string/reset"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
