--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -178,15 +178,27 @@
     </androidx.core.widget.NestedScrollView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:cardElevation="8dp"
-        app:cardBackgroundColor="@color/lightest_neutral">
+        app:cardBackgroundColor="@color/lightest_neutral"
+        app:cardElevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <ProgressBar
+                android:id="@+id/pb_register"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="@+id/btn_register"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/btn_register"
+                app:layout_constraintTop_toTopOf="@+id/btn_register" />
 
             <Button
                 android:id="@+id/btn_register"
@@ -201,7 +213,6 @@
                 android:background="@drawable/button_state_selector"
                 android:enabled="false"
                 android:letterSpacing="0.01"
-                android:onClick="confirmInput"
                 android:text="@string/register_as_borrower"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
