--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -46,7 +46,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".setting.ChangePasswordActivity">
+            tools:context=".view.setting.ChangePasswordActivity">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edt_old_password"
